# LeftTurn

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  AGENTS.md  API_USAGE.md  Dockerfile  Makefile  README.md  build.sh  deploy.sh  function_app.py  local.settings.json  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
.github/workflows/: ci-cd.yml  ci.yml  deploy-bicep.yml  deploy-functions.yml
docs/: CONTRIBUTING.md  README.md  leftturn-architecture.md  marketplace-deployment.md  teams-integration.md
docs/diagrams/: leftturn-arch.mmd
docs/openapi/: agent-gateway.yaml  leftturn.generated.yaml  leftturn.yaml
fabric/sql/: README.md  rls_carrier.sql  (+2 more)
infra/: README.md
notebooks/: README.md  carrier_structured.ipynb  carrier_unstructured.ipynb  erp_structured.ipynb
patches/: leftturn_full_snapshot.patch
src/: README.md  __init__.py
teams/: README.md
tests/: README.md  conftest.py  test_agent_gateway_http.py  test_agents.py  test_cards.py  test_fabric_agent_modes.py  test_gateway_capping.py  test_gateway_extract_value.py  test_graph_graceful.py  test_headers.py  test_obo.py  test_orchestrator_defaults.py  test_orchestrator_semantic.py  test_pbi_link.py  test_retries.py  test_router.py  test_router_extras.py  test_search_service.py  test_services.py  test_sql_readonly.py  test_storage.py  test_storage_partition.py  test_tools_manifest.py  test_utils.py  test_view_only_templates.py
tools/: README.md  commit_folder_descriptions.sh  fabric_register_views.py  generate_manifests.py  repo_sanity.py  run_tests.sh  setup_cloud.sh
(+43 files in other folders)
